--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
 
 body {
     font-family: Arial, Verdana, sans-serif;
-    /*background: url("../img/bg-img2.jpg") no-repeat top / contain fixed;*/
 }
 
 a {
@@ -23,8 +22,13 @@ li {
 button {
     border: none;
     cursor: pointer;
+    font-size: 1rem;
+    background: none;
 }
 
+button:active, button:focus {
+    outline: none;
+}
 
 .container {
     width: 100%;
@@ -32,16 +36,22 @@ button {
 
 /* Header */
 
+header {
+    width: 100%;
+    position: fixed;
+}
+
 .nav {
     display: flex;
+    width: 100%;
+    height: auto;
     justify-content: center;
     padding: 20px;
     background: #F7F7F7;
-
 }
 
 .nav-link {
-    margin-right: 20px;
+    margin-right: 40px;
     color: #000;
     border-bottom: 2px solid #F7F7F7;
 }
@@ -54,13 +64,118 @@ button {
     display: none;
 }
 
+.bg-img {
+    width: 100%;
+    height: 100vh;
+    background: url("../img/bg-img2.jpg") no-repeat top / cover fixed;
+}
 
 /* Main */
 
+/* Section Main */
+#task {
+    height: 150px;
+    width: 100%;
+}
+
+.task {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+}
+
+.task-img {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    flex: 2;
+}
+
+.img {
+    flex: 1;
+}
+
+.img img {
+    object-fit: cover;
+    width: 80%;
+
+}
+
+.task-text {
+    flex: 2;
+    padding: 10px;
+}
+
+.task-text h2 {
+    text-align: center;
+    margin: 10px 0;
+}
+
+.task-text p {
+    width: 80%;
+    margin: 0 auto;
+    padding: 10px;
+    text-align: justify;
+    text-indent: 20px;
+}
+
+
+.task-action {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 20px;
+
+}
+
+.task-action button {
+    padding: 10px;
+    border-radius: 5px;
+    color: #fff;
+    width: 100px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+
+.insert {
+    background: #35ab4c;
+    align-self: flex-start;
+}
+
+.insert:hover {
+    background: #327841;
+    align-self: center;
+}
+
+.edit {
+    background: #c08f33;
+}
+
+.edit:hover {
+    background: #AC802E;
+    transition: all ease 0.5s
+}
+
+.del {
+    background: red;
+    transition: all ease 0.5s
+}
+
+.del:hover {
+    background: #BE0606;
+    transition: all ease 0.5s
+}
+
+/*.task-hidden {*/
+/*    !*position: absolute;*!*/
+/*}*/
+
 /* Section Contact */
 
-section {
+.contact {
     width: 100%;
+    height: 100vh;
     background: #fff;
     display: flex;
     flex-direction: column;
@@ -70,10 +185,8 @@ section {
 
 .contact-form {
     width: 40%;
-    margin: 60px 0 60px;
     padding: 60px 30px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.05), 0 2px 5px 0 rgba(0, 0, 0, 0.2);
-
 }
 
 .form-group {
@@ -91,7 +204,7 @@ section {
     border-radius: 5px;
 }
 
-textarea::-webkit-input-placeholder{
+textarea::-webkit-input-placeholder {
     font-size: 1.1rem;
 }
 
@@ -124,13 +237,11 @@ textarea::-webkit-input-placeholder{
 
 /* Valid */
 
-.form-group.success input, .form-group.success textarea{
+.form-group.success input, .form-group.success textarea {
     border: 2px solid #28a745;
 }
 
-
-
-@media screen and (max-width: 1280px){
+@media screen and (max-width: 1280px) {
     .contact-form {
         width: 100%;
     }
@@ -148,7 +259,6 @@ textarea::-webkit-input-placeholder{
         justify-content: center;
         width: 200px;
         background: none;
-
     }
 
     .nav-link {
@@ -165,7 +275,6 @@ textarea::-webkit-input-placeholder{
     .nav.responsive {
         flex-direction: column;
         justify-content: flex-start;
-        /*position: fixed;*/
         background: #F7F7F7;
         width: 250px;
         height: 100vh;
@@ -190,10 +299,13 @@ textarea::-webkit-input-placeholder{
 
     }
 
+    .bg-img {
+        display: none;
+    }
+
     .contact-form {
         width: 100%;
     }
-
 
 
 }
