--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ header {
 
 /* Section Main */
 #task {
-    height: 150px;
+    height: 50px;
     width: 100%;
 }
 
@@ -91,6 +91,28 @@ header {
     width: 100%;
     height: 100vh;
     padding: 20px
+}
+
+.sectionUpdate {
+    padding: 20px;
+    margin-bottom: 20px;
+    cursor: pointer;
+
+}
+
+.sectionUpdate.selectElement {
+    border: 1px solid #ff0000;
+}
+
+.select {
+    width: 80%;
+    margin: 20px auto;
+    display: flex;
+    justify-content: space-around;
+}
+
+.select-text textarea {
+    margin-left: 20px;
 }
 
 .task-img {
@@ -102,8 +124,7 @@ header {
 }
 
 .task-img img {
-    width: 10%;
-    /*object-fit: cover;*/
+   width: 10%;
     margin-right: 10px;
 }
 
@@ -122,6 +143,29 @@ header {
     padding: 10px;
     text-align: justify;
     text-indent: 20px;
+}
+
+.addImg {
+    visibility: hidden;
+}
+.addImg.visible {
+    visibility: visible;
+}
+
+.addImg img {
+    width: 50px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+
+.addImg img:hover {
+    border: 1px solid #35ab4c;
+    transition: all ease 1s;
+}
+
+.addImg img.sel {
+    border: 2px solid #35ab4c;
+    width: 60px;
 }
 
 .task-action {
@@ -161,7 +205,7 @@ header {
 }
 
 .del {
-    background: red;
+    background: #ff0000;
     transition: all ease 0.5s
 }
 
